--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <title>Bookworm</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="favicon.png">
 
     {{content-for 'head'}}
 
